# mochi-shell

./: .gitmodules  weston-env  weston.ini
bar/: Cargo.toml
bar/shell/: main.rs
bar/src/: main.rs
compositor/: Cargo.toml  Makefile  README.md  build.rs  install-deps.sh  main.c  meson.build
compositor/src/: main.rs  state.rs
crates/mochi-api/: Cargo.toml
crates/mochi-rs/: Cargo.toml  build.rs
crates/mochi-rs/src/: canvas.rs  color.rs  lib.rs  main.rs  ui.rs  window.rs
crates/mochi-rs/src/core/: canvas.rs  color.rs  dialog.rs  mod.rs  text.rs  ui.rs  window.rs
crates/mochi-rs/src/core/gpu/: backend.rs  effects.rs  ffi.rs  glsl.rs  gpucontext.c  gpucontext.h  mod.rs  passes.c  passes.h  passes_ffi.rs  renderer.rs  shader.rs  vertex.rs
crates/mochirs-gui/: Cargo.toml
crates/mochirs-gui/examples/: custom_shaders.rs  gpu_demo.rs
crates/mochirs-gui/src/: main.rs
crates/mochirs-gui/src/core/: canvas.rs  rsx.rs  ui.rs  window.rs
crates/moshi-rs/: Cargo.toml
crates/moshi-rs/src/: main.rs  text.rs  window.rs
testuu/: Cargo.toml
testuu/src/: main.rs
