[package]
name = "hanami-compositor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "hanami"
path = "src/main.rs"

[dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_drm",
    "backend_libinput", 
    "backend_udev",
    "backend_winit",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "xwayland"
] }
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server"] }
slog = "2.8"
slog-stdlog = "4.1"
slog-term = "2.9"
slog-async = "2.8"
calloop = "0.14"
nix = { version = "0.30", features = ["signal"] }
glam = "0.30"

[build-dependencies]
cc = "1.2"

[features]
default = []
debug = []

