[package]
name = "mochi-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "mochi"
path = "src/lib.rs"

[[bin]]
name = "mochi-demo"
path = "src/main.rs"

[[bin]]
name = "shader_test"
path = "examples/custom_shaders.rs"

[dependencies]
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
fontdue = "0.9"
resvg = "0.43"
tiny-skia = "0.11"
glam = "0.30.10"

# GPU backends - raw bindings
ash = { version = "0.38", optional = true }
khronos-egl = { version = "6.0", optional = true }

[build-dependencies]
cc = "1.0"

[features]
default = ["vulkan"]
vulkan = ["ash"]
opengl = ["khronos-egl"]
gles = ["khronos-egl"]
