[package]
name = "mochi-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "mochi"
path = "src/lib.rs"

[[bin]]
name = "mochi-demo"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
fontdue = "0.9"
resvg = "0.43"
tiny-skia = "0.11"
glam = "0.30.10"
smithay = "0.7.0"
breadx = "3.1.0"
image = "0.25.9"

[features]
default = []
